BE/Aucation_chat/src/main/java/com/example/aucation_chat/common/error/SmsSendFailException.java
package com.example.aucation_chat.common.error;

public class SmsSendFailException extends RuntimeException {

    public SmsSendFailException(ApplicationError error) {
        super(error.getMessage());
    }
}
